<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartpot.botanicaljournal.AddPlantFragment">

    <RelativeLayout
        android:id="@+id/plantLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <ImageView
                android:id="@+id/headerBackground"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorLightBackground"
                android:contentDescription="@string/backImageDesc"
                android:src="@color/colorLightBackground" />

            <ImageView
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/headerBackground"
                android:contentDescription="@string/borderDesc"
                android:src="@color/clickedMenuItem" />

            <FrameLayout
                android:id="@+id/plantImageLayout"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:background="@android:drawable/dialog_holo_light_frame">

                <ImageView
                    android:id="@+id/plantImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_pic"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/addImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_pic_low"
                    android:visibility="gone" />
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/plantNameLayout"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/plantImageLayout">

                <com.smartpot.botanicaljournal.ProfileField
                    android:id="@+id/plantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_centerVertical="true"
                    custom:hintText="@string/plantNameText"
                    custom:textColor="@color/colorPrimaryDark"
                    custom:textSize="26sp" />

                <com.smartpot.botanicaljournal.ProfileField
                    android:id="@+id/plantPhylogeny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_below="@+id/plantName"
                    android:layout_centerVertical="true"
                    custom:hintText="@string/plantTypeText"
                    custom:textColor="@color/colorPrimaryDark"
                    custom:textSize="16sp"
                    custom:isItalic="true" />


            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/plantDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginTop="0dp"
            android:orientation="vertical"
            android:paddingEnd="16dp"
            android:paddingStart="16dp">

            <RelativeLayout
                android:id="@+id/moistureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/waterIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_water" />

                <TextView
                    android:id="@+id/moistureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/waterIcon"
                    android:includeFontPadding="false"
                    android:text="@string/moistureLevelText"
                    android:textColor="@color/colorDarkAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/border2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/moistureLabel"
                    android:contentDescription="@string/borderDesc"
                    android:src="@color/colorDarkAccent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_below="@+id/border2"
                    android:layout_marginTop="8dp"
                    android:max="100"
                    android:progressDrawable="@layout/progress_bar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="1.0" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lastWateredLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/border3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/lastWateredLabel"
                    android:contentDescription="@string/borderDesc"
                    android:elevation="0dp"
                    android:src="@color/colorDarkAccent" />

                <ImageView
                    android:id="@+id/timeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_time" />

                <TextView
                    android:id="@+id/lastWateredLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/timeIcon"
                    android:layout_toStartOf="@+id/updateLastWateredButton"
                    android:includeFontPadding="false"
                    android:text="@string/lastWateredText"
                    android:textColor="@color/colorDarkAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <com.smartpot.botanicaljournal.ProfileField
                    android:id="@+id/lastWatered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_below="@+id/border3"
                    android:layout_centerVertical="true"
                    android:elevation="0dp"
                    custom:textColor="@color/hintColor"
                    custom:textSize="18sp" />

                <Button
                    android:id="@+id/updateLastWateredButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/border3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:background="@null"
                    android:elevation="0dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:padding="0dp"
                    android:text="Update"
                    android:textAlignment="center"
                    android:textColor="#0071A7"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bDayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/cancelButton"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/border4"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_cancel" />

                <ImageView
                    android:id="@+id/border4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/bdayLabel"
                    android:contentDescription="@string/borderDesc"
                    android:src="@color/colorDarkAccent" />

                <TextView
                    android:id="@+id/bdayLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/bDayIcon"
                    android:includeFontPadding="false"
                    android:text="@string/bDayText"
                    android:textColor="@color/colorDarkAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/bDayIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_birthday" />

                <TextView
                    android:id="@+id/bDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/border4"
                    android:layout_toStartOf="@+id/cancelButton"
                    android:inputType="none"
                    android:text="@string/bDayValue"
                    android:textColor="@color/hintColor"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notesLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/border5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/notesLabel"
                    android:contentDescription="@string/borderDesc"
                    android:src="@color/colorDarkAccent" />

                <ImageView
                    android:id="@+id/notesIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notes" />

                <TextView
                    android:id="@+id/notesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/notesIcon"
                    android:includeFontPadding="false"
                    android:text="@string/notesText"
                    android:textColor="@color/colorDarkAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/notesEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/border5"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/notes_border"
                    android:gravity="top"
                    android:hint="@string/addNotesText"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="2147483647"
                    android:minHeight="70dp"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/hintColor"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/potIdLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/colorLightBackground"
                android:padding="2dp">

                <EditText
                    android:id="@+id/potIdEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/potIdLabel"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/pot_id_hint"
                    android:inputType="textPersonName"
                    android:padding="0dp"
                    android:paddingBottom="0dp"
                    android:textColor="#9B9B9B"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/potIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pot_id_label"
                    android:textColor="@color/colorDarkAccent"
                    android:textSize="16sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/deletePlantButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorAccent"
                android:text="Delete"
                android:textColor="#9b9b9b" />

        </LinearLayout>

    </RelativeLayout>



</ScrollView>